Fix - Alignfull magrin value

--- a/style.css
+++ b/style.css
@@ -2447,8 +2447,8 @@ iframe#wp-custom-header-video {
 	}
 	.no-sidebar-full-width.boxed #primary .entry-content > .alignfull,
 	.no-sidebar.boxed #primary .entry-content > .alignfull {
-		margin-left: -30px;
-		margin-right: -30px;
+		margin-left: -15px;
+		margin-right: -15px;
 	}
 }
 
